Clear commented codes, exclamation, camera access description Camera description, If needs comment to show to user. It should add description. otherwise It is enough which default prompt message.

--- a/Coinca/Info.plist
+++ b/Coinca/Info.plist
@@ -21,7 +21,7 @@
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSCameraUsageDescription</key>
-	<string>Camera</string>
+	<string></string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string></string>
 	<key>UILaunchStoryboardName</key>
